--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Cookize</title>
+    <title>Cookiez</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -18,12 +18,11 @@
     <!-- Header -->
     <div id="headerDiv"></div>
 
-
     <!-- Banner -->
     <section id="banner">
       <div class="inner">
         <h1>
-          Cookize:
+          Cookiez:
           <span
             >A free + Best<br />
             recipe web application</span
@@ -65,7 +64,7 @@
             </div>
             <p>
               During this tough time, if you would like to learning how to cook,
-              Cookize can provide you with best service to learn cooking skill
+              Cookiez can provide you with best service to learn cooking skill
             </p>
           </div>
         </article>
