--- a/what.html
+++ b/what.html
@@ -1,44 +1,235 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <!--
 	Introspect by TEMPLATED
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
 <html>
-	<head>
-		<title>Generic - Introspect by TEMPLATED</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body>
+  <head>
+    <title>Generic - Introspect by TEMPLATED</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
+    <link rel="stylesheet" href="assets/css/main.css" />
+  </head>
+  <body>
+    <!-- Header -->
+    <div id="headerDiv"></div>
 
-		<!-- Header -->
-		<div id="headerDiv"></div>
-	
+    <!-- Main -->
+    <section id="main">
+      <div class="inner">
+        <header class="major special">
+          <h1>Cookiez</h1>
+        </header>
+        <!-- <a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a> -->
+        <h2>1.Description</h2>
+        <p>
+          In the current Covid-19 epidemic situation in most countries,
+          especially in Australia, people are restricted from going out and that
+          greatly affects the quality of their meals. The project we decided to
+          implement is a food and recipe application that organizes a list of
+          recipes based on the ingredients in the user’s kitchen. It hopes to
+          solve the problem of not knowing how to use the ingredients at home
+          and providing ideas on what to cook it when you have no specific
+          ideas. By doing so, we hope to save million tons of food wastage
+          issue, support user to save money from ordering food from restaurants
+          and provide a user-friendly interface that users of all ages can
+          enjoy.
+          <p><b>High level user story: <br></b> <b> As a</b> user, 
+            I want to know which recipe I can use to cook with ingredients in my pantry and I can order online if I don’t have some of the required ingredients 
+            <b><br> so that </b> I can better prepare daily meals for me and my family and save the time as well. </p>
+        </p>
+        <h2>2.Demonstrable Outcomes</h2>
+        <h3>2.1 Project Motivation</h3>
+        <p>
+          This is an upgrade project from the existing applications. We have
+          found their missing points and decided to improve them with this
+          recipe application project. They are not only suitable for all ages
+          but also provide the best support for them. Other apps like Tasty or
+          Yummly only offer available menus and force users to follow them in
+          order to cook the best food. Our app is pretty much the same, which
+          makes a difference and is also the purpose of the app is to help users
+          find the recipe they want to cook with everything in their pantry.
+        </p>
 
-		<!-- Main -->
-			<section id="main" >
-				<div class="inner">
-					<header class="major special">
-						<h1>Generic</h1>
-						<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
-					</header>
-					<a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a>
-					<p>Vis accumsan feugiat adipiscing nisl amet adipiscing accumsan blandit accumsan sapien blandit ac amet faucibus aliquet placerat commodo. Interdum ante aliquet commodo accumsan vis phasellus adipiscing. Ornare a in lacinia. Vestibulum accumsan ac metus massa tempor. Accumsan in lacinia ornare massa amet. Ac interdum ac non praesent. Cubilia lacinia interdum massa faucibus blandit nullam. Accumsan phasellus nunc integer. Accumsan euismod nunc adipiscing lacinia erat ut sit. Arcu amet. Id massa aliquet arcu accumsan lorem amet accumsan.</p>
-					<p>Amet nibh adipiscing adipiscing. Commodo ante vis placerat interdum massa massa primis. Tempus condimentum tempus non ac varius cubilia adipiscing placerat lorem turpis at. Aliquet lorem porttitor interdum. Amet lacus. Aliquam lobortis faucibus blandit ac phasellus. In amet magna non interdum volutpat porttitor metus a ante ac neque. Nisi turpis. Commodo col. Interdum adipiscing mollis ut aliquam id ante adipiscing commodo integer arcu amet Ac interdum ac non praesent. Cubilia lacinia interdum massa faucibus blandit nullam. Accumsan phasellus nunc integer. Accumsan euismod nunc adipiscing lacinia erat ut sit. Arcu amet. Id massa aliquet arcu accumsan lorem amet accumsan commodo odio cubilia ac eu interdum placerat placerat arcu commodo lobortis adipiscing semper ornare pellentesque.</p>
-					<p>Amet nibh adipiscing adipiscing. Commodo ante vis placerat interdum massa massa primis. Tempus condimentum tempus non ac varius cubilia adipiscing placerat lorem turpis at. Aliquet lorem porttitor interdum. Amet lacus. Aliquam lobortis faucibus blandit ac phasellus. In amet magna non interdum volutpat porttitor metus a ante ac neque. Nisi turpis. Commodo col. Interdum adipiscing mollis ut aliquam id ante adipiscing commodo integer arcu amet blandit adipiscing arcu ante.</p>
-				</div>
-			</section>
+        <p>
+          This is a project that oriented towards database management. We
+          learned about them in year 1 so we can properly apply it to this
+          project. Plus, this project is about web editing and designing as the
+          main part of this course, therefore, each person needs to develop
+          their own coding and managing skills for each stage of the app
+          development.
+        </p>
+        <h3>2.2 Minimum Viable Features (MVF)</h3>
 
-		<!-- Footer -->
-	    <div id="footerDiv"></div>
+        <ul>
+          <li>
+            <b> Personal account managing system:</b> <br />
+            Users should be able to create new accounts, log in, and log out.
+          </li>
+          <li>
+            <b> Slider:</b> <br />
+            The main page will have a picture slider that shows recommending
+            recipes.
+          </li>
+          <li>
+            <b>Data collection and recommendation </b> <br />
+            On the website, there should be a table to collect the user’s
+            kitchen remains so that suitable dishes can be recommended
+            accordingly.
+          </li>
+          <li>
+            <b>Recipe information:</b> <br />
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-			<script src="assets/js/loader.js"></script>
-	</body>
+            Below the slider, there will be a list of recipes with pictures.
+            Users can click on the picture for further information.
+          </li>
+          <li>
+            <b> Step-by-step instructions: </b><br />
+
+            Each recipe will have detailed descriptions of ingredients and
+            cooking methods. Besides, step-by-step instructions with pictures
+            will be applied to help the user to cook.
+          </li>
+          <li>
+            <b> Tags and searching: </b><br />
+
+            To help users find their suitable recipes, tags will be used in
+            recipes. Those tags may contain key ingredients. Users will have a
+            more pleasing searching experience because tags help them to target
+            recipes more precisely.
+          </li>
+          <li>
+            <b> Upload and manage posts:</b> <br />
+            Users are expected to upload their own posts and be able to modify
+            or delete them.
+          </li>
+        </ul>
+        <h3>2.3 Extended Viable Features (EVF)</h3>
+        <ul>
+          <li>
+            <b> Recipe rating and comment: </b><br />
+
+            Users are free to rate and comment on any recipe.
+          </li>
+          <li>
+            <b>Health risks and precaution (Allergy Prevention):</b> <br />
+
+            Recipe posts could have ingredient warnings to inform people with
+            certain allergies of potential risks.
+          </li>
+          <li>
+            <b>Collection and Favourite function: </b> <br />
+
+            The collection and favourite function can help users collect their
+            favorite recipes
+          </li>
+          <li>
+            <b>Substitution: </b> <br />
+
+            The website could have a function to detect missing ingredients and
+            offer substitution suggestions.
+          </li>
+          <li>
+            <b>Shopping helper: </b> <br />
+
+            When missing ingredients are detected, the website could search
+            nearby shops for supplement or even help users order them online.
+          </li>
+        </ul>
+        <h2>3. Project Justification</h2>
+        <h3>3.1 Workload</h3>
+        <p>
+          <b>Expectation:</b> We plan to meet once every 3-4 business days to
+          assign work to each person based on their knowledge and strengths. We
+          will divide them into different parts of the project such as
+          designing, site coding, workspace managing, annotating and general
+          managing. <br />
+          <b>Reality:</b> Basically, everything is on the track up to now. The
+          only thing that is limited is the meeting on Teams. We have different
+          schedules, so it is difficult to choose a time for people to
+          participate in discussions and suggestions on the project. However, we
+          have already finished assigning in the first group meeting and
+          everyone also tried to complete their part well.
+        </p>
+        <h3>3.2 Beyond Current Capabilities</h3>
+        <!-- TODO Beyond Current Capabilities -->
+        <p>We have not created a web app before</p>
+        <h3>3.3 Risks</h3>
+        <ol>
+          <h4>team dynamics risk</h4>
+          <li>
+            <b>Risk:</b>
+            Do not have enough time to finish all the features.
+            <br />
+            <b>Example: </b>Our group may face hard technological problems.
+            <br />
+            <b>Mitigation:</b>Ask the lecturer or the tutor. More communication
+            to decrease the number of unreachable features.
+          </li>
+          <br />
+          <li>
+            <b>Risk:</b>
+            Suddenly or unpredictable requirements are adding
+            <br />
+            <b>Example: </b>we may forget to add a vital function to the
+            application.<br />
+            <b>Mitigation:</b>do more communication and learn more about how to
+            build a system
+          </li>
+          <br />
+          <li>
+            <b>Risk:</b>
+            Limited knowledge reserve lead to the delay our project’s progress.
+            <br />
+            <b>Example: </b>we may have no idea to achieve the background side.
+            <br />
+            <b>Mitigation:</b>learn more or delete difficult features
+          </li>
+          <br />
+          <h4>project risks</h4>
+          <li>
+            <b>Risk:</b>
+            Recipe content
+            <br />
+            <b>Example: </b> recipe content cannot be shown properly.<br />
+            <b>Mitigation:</b>learn more html and css technology.
+          </li>
+          <br />
+          <li>
+            <b>Risk:</b>
+            Concurrency control
+            <br />
+            <b>Example: </b> Overloaded server<br />
+            <b>Mitigation:</b>Minimize main database but still keep the
+            flexibility and the algorithms that used for the main function.
+          </li>
+          <br />
+          <li>
+            <b>Risk:</b>
+            Content control/authorization
+            <br />
+            <b>Example: </b> The workload for administrators is huge.<br />
+            <b>Mitigation:</b>Implement the authorization program which can
+            check each post that user going to upload, and the checking process
+            will be taken over by cooperated chefs
+          </li>
+          <br />
+        </ol>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <div id="footerDiv"></div>
+
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/skel.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+    <script src="assets/js/loader.js"></script>
+  </body>
 </html>
