--- a/how.html
+++ b/how.html
@@ -5,105 +5,175 @@
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
 <html>
-  <head>
-    <title>Resources and Tools</title>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
-    <link rel="stylesheet" href="assets/css/main.css" />
-  </head>
-  <body>
-    <!-- Header -->
-    <div id="headerDiv"></div>
 
-    <!-- Main -->
-    <section id="main">
-      <div class="inner">
-        <header class="major special">
-          <h1>How</h1>
-          <p>We will describe how to finish our plan</p>
-        </header>
-        <img src="images/java.jpg" width="367" height="248" alt="" />
-        <img src="images/springboot.jpg" width="467" height="248" alt="" />
-        <img src="images/thymeleaf.png" width="248" height="248" alt="" />
-        <p>
-          <b>Description:</b> Java is a general-purpose programming language
-          that is class-based, object-oriented.
-          <a href="https://java.com/">-link</a> <br />
-          <b>Why we use:</b> popular, some of team members are skillful to use
-          java.
-          <br />
-          <b>Price</b> : free <br />
-          <b>Version: </b> 11 <br />
-          <b>Alternatives:</b> Python
-          <a href="https://www.python.org/">-link</a>, ruby
-          <a href="https://www.ruby-lang.org/">-link</a>, php
-          (https://www.php.net/)
-        </p>
+<head>
+  <title>Resources and Tools</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+  <link rel="stylesheet" href="assets/css/main.css" />
+</head>
 
-        <p>
-          <b>Description:</b> Spring boot is a back-end application framework
-          for java platform. <a href="https://spring.io/">-link</a> <br />
-          <b>Why we use:</b> Spring boot is most common in industry. <br /><b
-            >Version: </b
-          >2.3.2 <br /><b>Price:</b> free <br />
-          <b>Alternatives:</b> javelin <a href="https://javalin.io/">-link</a>,
-          ruby in rails <a href="https://rubyonrails.org">-link</a>
-        </p>
-        <p>
-          <b>Description:</b> Thymeleaf is a modern server-side Java template
-          engine.
-          <a href="https://www.thymeleaf.org/">-link</a>
-          <br />
-          <b>Why we use:</b> It is easy to learn and is fit for spring boot
-          <br />
-          <b>Version: </b> 3.0.11 <br /><b>Price:</b> free <br />
-          <b>Alternatives:</b> react <a href="https://reactjs.org/">-link</a>,
-          vue
-          <a href="https://vuejs.org/">-link</a>
-        </p>
-        <p>
-          <b>Description:</b> MyBatis is a persistence framework with support
-          for custom SQL, stored procedures and advanced mappings.
-          <a href="https://mybatis.org/">-link</a> <br />
-          <b>Why we use:</b> mybatis can reduce our workload to access database.
-          <br />
-          <b>Version: </b>3.5.5 <br />
-          <b>Price:</b> free <br />
-          <b>Alternatives:</b> hibernate
-          <a href="http://www.hibernate.org/">-link</a>
-        </p>
+<body>
+  <!-- Header -->
+  <div id="headerDiv"></div>
 
-        <p>
-          <b>Description:</b> Maven is a dependency management tool <br />
-          <b>Why we use:</b> it is useful for java programming <br /><b>Version: </b><br /><b
-            >Alternatives:</b
-          >
-        </p>
+  <!-- Main -->
+  <section id="main">
+    <div class="inner">
+      <header class="major special">
+        <h1>How</h1>
+        <p>We will describe how to finish our plan</p>
+      </header>
+      <img src="images/java.jpg" width="367" height="248" alt="" />
+      <img src="images/springboot.jpg" width="467" height="248" alt="" />
+      <img src="images/thymeleaf.png" width="248" height="248" alt="" />
+      <h2>1. Resources and Tools</h2>
+      <ul>
+        <li>
+          <p>
+            <b>Description:</b> Java is a general-purpose programming language
+            that is class-based, object-oriented.
+            <a href="https://java.com/">(link)</a> <br />
+            <b>Why we use:</b> popular, some of team members are skillful to
+            use java.
+            <br />
+            <b>Price</b> : free <br />
+            <b>Version: </b> 11 <br />
+            <b>Alternatives:</b> Python
+            <a href="https://www.python.org/">(link)</a>, ruby
+            <a href="https://www.ruby-lang.org/">(link)</a>, php<a href="https://www.php.net/">(link)</a>
+          </p>
+        </li>
+        <li>
+          <p>
+            <b>Description:</b> Spring boot is a back-end application
+            framework for java platform.
+            <a href="https://spring.io/">(link)</a> <br />
+            <b>Why we use:</b> Spring boot is most common in industry.
+            <br /><b>Version: </b>2.3.2 <br /><b>Price:</b> free <br />
+            <b>Alternatives:</b> javelin
+            <a href="https://javalin.io/">(link)</a>, ruby in rails
+            <a href="https://rubyonrails.org">(link)</a>
+          </p>
+        </li>
+        <li>
+          <p>
+            <b>Description:</b> Thymeleaf is a modern server-side Java
+            template engine.
+            <a href="https://www.thymeleaf.org/">(link)</a>
+            <br />
+            <b>Why we use:</b> It is easy to learn and is fit for spring boot
+            <br />
+            <b>Version: </b> 3.0.11 <br /><b>Price:</b> free <br />
+            <b>Alternatives:</b> react
+            <a href="https://reactjs.org/">(link)</a>, vue
+            <a href="https://vuejs.org/">(link)</a>
+          </p>
+        </li>
+        <li>
+          <p>
+            <b>Description:</b> MyBatis is a persistence framework with
+            support for custom SQL, stored procedures and advanced mappings.
+            <a href="https://mybatis.org/">(link)</a> <br />
+            <b>Why we use:</b> mybatis can reduce our workload to access
+            database.
+            <br />
+            <b>Version: </b>3.5.5 <br />
+            <b>Price:</b> free <br />
+            <b>Alternatives:</b> hibernate
+            <a href="http://www.hibernate.org/">(link)</a>
+          </p>
+        </li>
+        <li>
+          <!-- TODO Maven!!! -->
+          <p>
+            <b>Description:</b> Maven is a dependency management tool <br />
+            <b>Why we use:</b> it is useful for java programming <br /><b>Version: </b><br /><b>Alternatives:</b>
+          </p>
+        </li>
+        <li>
+          <p>
+            <b>Description:</b> Mysql is the world's most popular open source
+            database. <a href="https://www.mysql.com/">(link)</a>
+            <br />
+            <b>Why we use:</b> popular, open source <br />
+            <b>Version: </b> 8.0.21 <br />
+            <b>Price:</b> free <br />
+            <b>Alternatives:</b> H2
+            <a href="https://h2database.com/">(link)</a>, sqlite
+            <a href="http://www.sqlite.org/">(link)</a> And HTML, CSS
+          </p>
+        </li>
+      </ul>
+      <h2>2. Collaborative Workspaces</h2>
+      <p>
+        Currently we are using MS Teams as the main channel for the group
+        work, we also created a GitHub repository for sharing and editing the
+        main site.
+      <p>
+        <b>GitHub repository:</b>
+        <a href="https://github.com/YiYang-Clotho/TR-WE-430-Ditto ">link</a>
+      </p>
+      <p>
+        <b>Trello:</b>
+        <a href="https://trello.com/b/9n2h12R1/build-it-systems  ">link</a>
+      </p>
+      </p>
+      <!-- TODO Fuck Group Contract!!! -->
+      <h2>3. Group Contract</h2>
+      <p>
+      <h3>Task List</h3>
+      <p>Everyone will be responsible for his/her individual work, but group members should help each other and work
+        together for an optimal final project.
+        Individual group members should be listed with specific obs related to the final project so that it is clear
+        that all know who is responsible for each task.
+      </p>
+      <h3>Group Constitution</h3>
+      <p>This contract governs the group until the assigned project deadline.
+        If the group separates or a member is dismissed. the basic contract laws remain
+        intact for all parties.
+        However, should a group member be dismissed from the group, work responsibilities may be required to shift.
+      </p>
+      <h3>Team Meeting Ground Rules</h3>
+      <p>
+      <ol>
+        <li>This contract governs the group until the assigned project deadline.
+          If the group separates or a member is dismissed. the basic contract laws remain
+          intact for all parties.
+          However, should a group member be dismissed from the group, work responsibilities may be required to shift.
+        </li>
+        <li>Everyone will be responsible for his/her individual work, but group members should help each other and work
+          together for an optimal final project.
+          Individual group members should be listed with specific obs related to the final project so that it is clear
+          that all know who is responsible for each task.
+        </li>
+        <li>Keep issues and answer that arise in meetings in confidence within the team unless otherwise indicated</li>
+        <li>Be honest and open during meetings</li>
+        <li>Encourage a diversity of opinions on all topics.</li>
+        <li>Give everyone the opportunity for equal participation</li>
+        <li>Attend the meeting on time and promise not to quit early.</li>
+      </ol>
+      </p>
+      <h3>Article I: Absence Policy</h3>
+      <p>The group must decide and document in this area how to handle problems associated with a group member that has
+        excessive absences or fails to complete work because of absences.</p>
+      <h3>Article Il: Work Policy</h3>
+      <p>Each group member will work to the best of his / her ability - making sure to complete the work, ensure that it
+        is up to standards, and it is completed with punctuality. Group members committing plagiarism are solely
+        responsible and incur the punishment on their own.</p>
+      </p>
+    </div>
+  </section>
 
-        <p>
-          <b>Description:</b> Mysql is the world's most popular open source
-          database. <a href="https://www.mysql.com/">-link</a>
-          <br />
-          <b>Why we use:</b> popular, open source <br />
-          <b>Version: </b> 8.0.21 <br />
-          <b>Price:</b> free <br />
-          <b>Alternatives:</b> H2 <a href="https://h2database.com/">-link</a>,
-          sqlite <a href="http://www.sqlite.org/">-link</a> And HTML, CSS
-        </p>
-      </div>
-    </section>
+  <!-- Footer -->
+  <div id="footerDiv"></div>
 
-    <!-- Footer -->
-    <div id="footerDiv"></div>
+  <!-- Scripts -->
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/js/skel.min.js"></script>
+  <script src="assets/js/util.js"></script>
+  <script src="assets/js/main.js"></script>
+  <script src="assets/js/loader.js"></script>
+</body>
 
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/skel.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
-    <script src="assets/js/loader.js"></script>
-  </body>
 </html>
