--- a/group/zhihao.html
+++ b/group/zhihao.html
@@ -38,51 +38,47 @@
           <p>Our group</p>
         </header>
 
-        <h2>Mingxuan Zhou</h2>
-        <img src="/images/mingxuan-zhou.jpg" width="100px" height="120px" />
-        <p>s3798529@student.rmit.edu.au</p>
+        <h2>Zhihao Liang</h2>
+        <img src="#" width="100px" height="120px" />
+        <p>s3798366@student.rmit.edu.au</p>
         <p>
-          <b>Background and passion: <br /> </b> I am an overseas student from
-          China. Now it’s my second year of Bachelor of IT. I had some coding
-          experience when I was in China. In the IT industry, I always find
-          analyzing data interesting. It is magical finding a regular pattern by
-          analyzing enormous and distributed data.
+          <b>
+            Background and passion:
+          </b><br>
+          I am an International student from China. I have learned some frameworks from the Internet, like spring boot, react and so on. I am interested in web programming and database management.
+
         </p>
         <p>
-          <b>Current ability:<br /> </b> I have already studied several coding
-          languages, including C, Java, and Python. Currently, I am studying
-          C++. Except for those, I have a certain understanding of C# and HTML,
-          CSS on building a web application. For my interest, I find the
-          back-end more appealing because I like coding more than designing the
-          front- end site.
+          <b>
+            Current ability and what interests me : 
+
+          </b><br>
+          I have learnt programming languages including C, C++, javascript, python and java and also know how to use Linux systems and deploy websites.
+
         </p>
         <p>
-          <b>Weak points:<br /> </b> Although I learned several coding
-          languages, I rarely have an opportunity to put those into practice. I
-          wish I could train my coding and problem-solving skills through this
-          project.
+          <b>
+            Weak points: 
+
+          </b><br>
+          I am weak in the area of web design and how to design a suitable layout on the website. Data structure and algorithms are difficult to learn. 
+
         </p>
         <p>
-          <b>The areas in need of development:</b>
-          <br />
-          Designing is one of them needing further development, it could be
-          frustrating to me if I lost patience in adjusting the framework of a
-          website. Patience is another one in which I may have a lagging
-          problem.
+          <b>
+            Challenges:
+
+          </b><br>
+          Time could be not enough and I am confused about how to use thymeleaf.
+
         </p>
         <p>
-          <b>Challenges:</b> <br />
-          Designing a well-organized database is one of the challenges because
-          this project demands many functions and different entities. Learning
-          new tools is hard as well, this project involves several new
-          java-based tools I am not familiar with like spring boot. Coding is
-          another one because some of this project’s features are complex and
-          require more time coding and testing.
-        </p>
-        <p>
-          Tasks: <br />
-          I could help with writing user stories, designing a database,
-          programming features.
+          <b>
+            Tasks: 
+
+          </b><br>
+          I can design databases and teach our group members how to use spring boot.
+
         </p>
       </div>
     </section>
