--- a/how.html
+++ b/how.html
@@ -198,7 +198,7 @@
       
            <td>Mingxuan Zhou</td>
            <td> C, Java and Python</td>
-           <td>Designing a well-organized database</td>
+           <td>Designing</td>
          </tr>
          <tr>
        
