--- a/group/gia.html
+++ b/group/gia.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Zhihao</title>
+    <title>Gia</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -35,33 +35,29 @@
       <div class="inner">
         <header class="major special">
           <h1>Our Group</h1>
-
         </header>
 
-        <h2>Zhihao Liang</h2>
-        <img src="/images/zhihao-liang.jpg" width="200px" height="200px" />
-        <p>s3798366@student.rmit.edu.au</p>
+        <h2>Gia Hung Le</h2>
+        <img src="/images/gia.jpg" width="256px" height="256px" />
+        <p>s3748335@student.rmit.edu.au </p>
         <p>
-          <b>Background and passion: <br /> </b>  I am an International student from China. I have learned some frameworks from the Internet, like spring boot, react and so on. I am interested in web programming and database management.
+          <b>Background and passion: <br /> </b>First year in Bachelor of IT
+          RMIT, started learning code from grade 11 Interested in video editing,
+          front-end developing and general web designing (HTML, CSS, Js, Java
+          basis)
         </p>
         <p>
-          <b>Current ability:<br /> </b> I have learnt programming languages including C, C++, javascript, python and java and also know how to use Linux systems and deploy websites. 
+          <b>Current ability:<br /> </b> Interested in video editing, front-end
+          developing and general web designing (HTML, CSS, Js, Java basis)
         </p>
         <p>
-          <b>Weak points:<br /> </b>I am weak in the area of web design and how to design a suitable layout on the website. Data structure and algorithms are difficult to learn.  
+          <b>Weak points:<br /> </b>Didn’t spent time on doing assignment well,
+          limited on front end framework
         </p>
+
         <p>
-          <b>The areas in need of development:</b>
-          <br />
-          I am weak in the area of web design and how to design a suitable layout on the website. Data structure and algorithms are difficult to learn.  
-        </p>
-        <p>
-          <b>Challenges:</b> <br />
-          Time could be not enough and I am confused about how to use thymeleaf. 
-        </p>
-        <p>
-          <b>Tasks:</b>  <br />
-          I can design databases and teach our group members how to use spring boot. 
+          <b>Tasks:</b> <br />
+          Ideas contributor, web editor
         </p>
       </div>
     </section>
