--- a/group/mingxuan.html
+++ b/group/mingxuan.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Our group</title>
+    <title>Mingxuan</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -35,7 +35,7 @@
       <div class="inner">
         <header class="major special">
           <h1>Our Group</h1>
-          <p>Our group</p>
+
         </header>
 
         <h2>Mingxuan Zhou</h2>
@@ -80,7 +80,7 @@
           require more time coding and testing.
         </p>
         <p>
-          Tasks: <br />
+          <b>Tasks:</b>  <br />
           I could help with writing user stories, designing a database,
           programming features.
         </p>
