--- a/group/heran.html
+++ b/group/heran.html
@@ -35,11 +35,11 @@
       <div class="inner">
         <header class="major special">
           <h1>Our Group</h1>
-          <p>Our group</p>
+  
         </header>
 
         <h2>Heran Wang</h2>
-        <img src="#" width="100px" height="120px" />
+        <img src="/images/heran-wang.jpg" width="200px" height="240px" />
         <p>s3807131@student.rmit.edu.au</p>
         <p><b>Personal background and passion in IT</b><br/>
           I am a student from China and come here through the international joint training program. Curious about everything new. Hope to be able to integrate into the study life of Melbourne as soon as possible. I have endless love for programming. I can learn some new programs by myself. 
