--- a/group/heran.html
+++ b/group/heran.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Our group</title>
+    <title>Heran</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
