--- a/contract.html
+++ b/contract.html
@@ -163,7 +163,12 @@
             <tr>
               <td>Le Gia Hung</td>
               <td>HTML, CSS, Js, Java basis</td>
-              <td>Java, mvc</td>
+              <td>
+                I want to focus on the front end and design because that is my
+                goal for the future. So I will have to focus on expanding my
+                knowledge of front end framework types and prototype design
+                skills
+              </td>
             </tr>
             <tr>
               <td>Mingxuan Zhou</td>
