--- a/group/gia.html
+++ b/group/gia.html
@@ -40,25 +40,27 @@
 
         <h2>Gia Hung Le</h2>
         <img src="/images/gia.jpg" width="256px" height="256px" />
-        <p>s3748335@student.rmit.edu.au </p>
+        <p>s3748335@student.rmit.edu.au</p>
         <p>
-          <b>Background and passion: <br /> </b>First year in Bachelor of IT
-          RMIT, started learning code from grade 11 Interested in video editing,
-          front-end developing and general web designing (HTML, CSS, Js, Java
-          basis)
+          <p>
+            
+          </p>
+          <b>Background and passion: <br /> </b> First year in Bachelor of IT RMIT, started learning code from grade 11 
         </p>
         <p>
-          <b>Current ability:<br /> </b> Interested in video editing, front-end
-          developing and general web designing (HTML, CSS, Js, Java basis)
+          <b>Current ability:<br /> </b> In year 1, I learned the basics of java, and I also know a bit about databases and sql queries. I learned more about html, css and javascript and how to apply them to web 
         </p>
         <p>
-          <b>Weak points:<br /> </b>Didn’t spent time on doing assignment well,
-          limited on front end framework
+          <b>Weak points:<br /> </b>I do not have much time to do assignment because my time is often changed. My language skills are also limited but I think I can improve. I also had some difficulty starting this subject because I didn't know much about the front end and back end framework but I could improve. 
         </p>
-
+<p> <b>Challenge :<br></b>This is an assignment required to do 1 complete app, so what I have been learning is not enough. They need full stack developed, so this will be a time challenge for not only me but the team. Anyway, we will try to complete them as much as possible, although not completely, we will meet the requirements of the project. </p>
         <p>
           <b>Tasks:</b> <br />
-          Ideas contributor, web editor
+          I can search for documents and aggregate them for the team, in
+          addition I can provide some more good ideas for the app, especially
+          about the features part because I have customer service skills so I
+          know the users will expect it. into something of the app. Also I can
+          edit code and design prototype
         </p>
       </div>
     </section>
