--- a/what.html
+++ b/what.html
@@ -598,86 +598,254 @@
       <table data-toggle="table">
         <thead>
           <tr>
-            <th>Week</th>
-            <th>Task</th>
+            <th>Weeks</th>
+            <th>Tasks</th>
+            <th>Time</th>
+            <th>Personnel</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>5: Design a database and discuss about interfaces </td>
+            <td><b>Week 3</b></td>
             <td>
-
-              Zhihao, yingjian, heran, mingxuan 4hours designing <br>
-
-              Yi, Gia 4hours think about interfaces <br>
-
-              All members 1-hour meeting discuss about interfaces </td>
+              <p><b> Confirm the topic and the requirements </b></p>
+              <p>
+                Confirmed the topic and think about the requirements
+                <br />
+                for the project
+              </p>
+              <p>Hold the group meeting</p>
+            </td>
+            <td>
+              <br /><br />
+              <p>4 hours</p>
+              <br />
+              <p>1 hour</p>
+            </td>
+            <td>
+              <br /><br />
+              <p>All of the members</p>
+            </td>
           </tr>
           <tr>
-            <td>6: Mockup and finalize interface structure</td>
-            <td>Zhinhao yingjian 4 hours MVF1,2 mockup <br>
-
-              Mingxuan heran 4 hours MVF3,4,5 mockup <br>
-
-              Yi, gia 4hours MVF6,7 mockup <br>
-
-              All members 1-hour meeting demo and optimization </td>
+            <td><b>Week 4</b></td>
+            <td>
+              <p><b> settle the topic and build the HTML </b></p>
+              <p>
+                Confirmed the topic with DR.B and perfect part of the
+                <br />
+                demand for the project
+              </p>
+              <p>Finish the template and build the HTML</p>
+              <p>Hold the group meeting</p>
+            </td>
+            <td>
+              <br /><br />
+              <p>2 hours</p>
+              <br />
+              <p>2 hours</p>
+              <p>1 hour</p>
+            </td>
+            <td>
+              <br /><br />
+              <p>All of the members</p>
+            </td>
           </tr>
           <tr>
-            <td>7: Build MVF1 personal account managing system</td>
-            <td>Zhinhao yingjian 4 hours Sign up <br>
-
-              Yi Heran Mingxuan 4 hours Login <br>
-
-              Gia Zhihao 4hours front-end design <br>
-
-              All members Meeting 1 hour </td>
+            <td><b>Week 5</b></td>
+            <td>
+              <p>
+                <b> Design a database and discuss about interfaces </b>
+              </p>
+              <p>Design a database</p>
+              <p>Discuss about interfaces</p>
+              <p>Hold the group meeting</p>
+            </td>
+            <td>
+              <br /><br />
+              <p>4 hours</p>
+              <p>4 hours</p>
+              <p>1 hour</p>
+            </td>
+            <td>
+              <br /><br />
+              <p>Zhihao, Yingjian, Heran, Mingxuan</p>
+              <p>Yi, Gia</p>
+              <p>All of the members</p>
+            </td>
           </tr>
           <tr>
-            <td>8: Build MVF3 Write a data collection feature </td>
-            <td>Zhihao, yi, heran ,yingjian 4hour data collection table <br>
-
-              Gia Mingxuan 4hours front-end design <br>
-
-              All members Meeting 1 hour </td>
+            <td><b>Week 6</b></td>
+            <td>
+              <p><b> Mockup and finalize interface structure </b></p>
+              <p>MVF1,2 mockup</p>
+              <p>MVF3,4,5 mockup</p>
+              <p>MVF3,6,7 mockup</p>
+              <p>Hold the group meeting</p>
+            </td>
+            <td>
+              <br /><br />
+              <p>4 hours</p>
+              <p>4 hours</p>
+              <p>4 hours</p>
+              <p>1 hour</p>
+            </td>
+            <td>
+              <br /><br />
+              <p>Zhihao, Yingjian</p>
+              <p>Heran, Mingxuan</p>
+              <p>Yi, Gia</p>
+              <p>All of the members</p>
+            </td>
           </tr>
           <tr>
-            <td>9: Build MVF2, MVF4, MVF5 Write recipe-related features </td>
-            <td>Gia Yingjian 4 hours MVF2 <br>
-
-              Zhihao Mingxuan 4hours MVF4 <br>
-
-              Yi Heran 4 Hours MVF5 <br>
-
-              All members Meeting 1 hour </td>
+            <td><b>Week 7</b></td>
+            <td>
+              <p><b> Build MVF1 personal account managing system </b></p>
+              <p>Sign up</p>
+              <p>Login</p>
+              <p>front-end design</p>
+              <p>Hold the group meeting</p>
+            </td>
+            <td>
+              <br /><br />
+              <p>4 hours</p>
+              <p>4 hours</p>
+              <p>4 hours</p>
+              <p>1 hour</p>
+            </td>
+            <td>
+              <br /><br />
+              <p>Zhihao, Yingjian</p>
+              <p>Yi, Heran, Mingxuan</p>
+              <p>Zhihao, Gia</p>
+              <p>All of the members</p>
+            </td>
           </tr>
           <tr>
-            <td>10: Build MVF6 Write about tags and realize searching function </td>
-            <td>Zhihao,yi,heran setting tags 4hours <br>
-
-              Mingxuan yingjian, zhihao searching function 4hours <br>
-
-              Gia Heran user interface 4hours <br>
-
-              All members Meeting 1 hour </td>
+            <td><b>Week 8</b></td>
+            <td>
+              <p><b> Build MVF3 Write a data collection feature </b></p>
+              <p>data collection table</p>
+              <p>front-end design</p>
+              <p>Hold the group meeting</p>
+            </td>
+            <td>
+              <br /><br />
+              <p>4 hours</p>
+              <p>4 hours</p>
+              <p>1 hour</p>
+            </td>
+            <td>
+              <br /><br />
+              <p>Zhihao, Yingjian, Yi, Heran</p>
+              <p>Mingxuan, Gia</p>
+              <p>All of the members</p>
+            </td>
           </tr>
           <tr>
-            <td>11: Build MVF7 Realize posting and managing function.</td>
-            <td>yingjian, heran post function 4hours <br>
-
-              Mingxuan, zhihao modify and delete function 4hours <br>
-
-              Gia interface 4hours <br>
-
-              All members Meeting 1 hour </td>
+            <td><b>Week 9</b></td>
+            <td>
+              <p>
+                <b>
+                  Build MVF2, MVF4, MVF5 Write recipe-related features
+                </b>
+              </p>
+              <p>MVF2</p>
+              <p>MVF4</p>
+              <p>MVF5</p>
+              <p>Hold the group meeting</p>
+            </td>
+            <td>
+              <br /><br />
+              <p>4 hours</p>
+              <p>4 hours</p>
+              <p>4 hours</p>
+              <p>1 hour</p>
+            </td>
+            <td>
+              <br /><br />
+              <p>Gia, Yingjian</p>
+              <p>Zhihao, Mingxuan</p>
+              <p>Yi, Heran</p>
+              <p>All of the members</p>
+            </td>
           </tr>
           <tr>
-            <td>12: Test and optimization </td>
-            <td>Gia Mingxuan Yi 4 hours flow test <br>
-
-              Zhihao Heran Yingjan 4 hours code review <br>
-
-              All members Meeting 1 hour </td>
+            <td><b>Week 10</b></td>
+            <td>
+              <p>
+                <b>
+                  Build MVF6 Write about tags and realize searching
+                  function
+                </b>
+              </p>
+              <p>setting tags</p>
+              <p>searching function</p>
+              <p>user interface</p>
+              <p>Hold the group meeting</p>
+            </td>
+            <td>
+              <br /><br />
+              <p>4 hours</p>
+              <p>4 hours</p>
+              <p>4 hours</p>
+              <p>1 hour</p>
+            </td>
+            <td>
+              <br /><br />
+              <p>Zhihao, Yi, Heran</p>
+              <p>Zhihao, Mingxuan, Yingjian</p>
+              <p>Gia, Heran</p>
+              <p>All of the members</p>
+            </td>
+          </tr>
+          <tr>
+            <td><b>Week 11</b></td>
+            <td>
+              <p>
+                <b> Build MVF7 Realize posting and managing function </b>
+              </p>
+              <p>post function</p>
+              <p>modify and delete function</p>
+              <p>interface</p>
+              <p>Hold the group meeting</p>
+            </td>
+            <td>
+              <br /><br />
+              <p>4 hours</p>
+              <p>4 hours</p>
+              <p>4 hours</p>
+              <p>1 hour</p>
+            </td>
+            <td>
+              <br /><br />
+              <p>Yingjian, Heran</p>
+              <p>Zhihao, Mingxuan, Yi</p>
+              <p>Gia</p>
+              <p>All of the members</p>
+            </td>
+          </tr>
+          <tr>
+            <td><b>Week 12</b></td>
+            <td>
+              <p><b> Test and optimization </b></p>
+              <p>flow test</p>
+              <p>code review</p>
+              <p>Hold the group meeting</p>
+            </td>
+            <td>
+              <br /><br />
+              <p>4 hours</p>
+              <p>4 hours</p>
+              <p>1 hour</p>
+            </td>
+            <td>
+              <br /><br />
+              <p>Gia, Mingxuan, Yi</p>
+              <p>Zhihao, Heran, Yingjian</p>
+              <p>All of the members</p>
+            </td>
           </tr>
         </tbody>
       </table>
@@ -720,10 +888,12 @@
 
           </tr>
           <tr>
-   <!-- TODO Giao Giao -->
+
             <td>Le Gia Hung</td>
             <td>
-              <p></p>
+              <p>
+                This is an assignment required to do 1 complete app, so what I have been learning is not enough. They need full stack developed, so this will be a time challenge for not only me but the team. Anyway, we will try to complete them as much as possible, although not completely, we will meet the requirements of the project. 
+              </p>
             </td>
 
           </tr>
