--- a/group/yi.html
+++ b/group/yi.html
@@ -27,6 +27,7 @@
       href="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.css"
     />
     <link rel="stylesheet" href="/assets/css/main.css" />
+    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" />
   </head>
   <body>
     <!-- Header -->
