--- a/group/gia.html
+++ b/group/gia.html
@@ -25,7 +25,8 @@
       rel="stylesheet"
       href="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.css"
     />
-    <link rel="stylesheet" href="/assets/css/main.css" />
+    <link rel="stylesheet" href="/assets/css/main.css" /> 
+     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" />
   </head>
   <body>
     <!-- Header -->
