template for assignment part 2

--- a/P1/contract.html
+++ b/P1/contract.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Resources and Tools</title>
+    <title>Contract</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -24,7 +24,7 @@
       rel="stylesheet"
       href="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.css"
     />
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="/assets/css/main.css" />
     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" />
   </head>
 
@@ -194,11 +194,11 @@
     <div id="footerDiv"></div>
 
     <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/skel.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
-    <script src="assets/js/loader.js"></script>
+    <script src="/assets/js/jquery.min.js"></script>
+    <script src="/assets/js/skel.min.js"></script>
+    <script src="/assets/js/util.js"></script>
+    <script src="/assets/js/main.js"></script>
+    <script src="/assets/js/loader.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
       integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
