--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="/assets/css/main.css" />
     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" />
   </head>
   <body>
@@ -26,7 +26,7 @@
           >
         </h1>
         <ul class="actions">
-          <li><a href="what.html" class="button alt">Get Started</a></li>
+          <li><a href="/P1/what.html" class="button alt">Get Started</a></li>
         </ul>
       </div>
     </section>
@@ -44,7 +44,7 @@
         </p>
 
         <ul class="actions">
-          <li><a href="group.html" class="button alt">Learn More</a></li>
+          <li><a href="/P1/group.html" class="button alt">Learn More</a></li>
         </ul>
       </div>
     </section>
@@ -96,7 +96,7 @@
               We can do a lot in this project, please see the detail
             </p>
             <ul class="actions">
-              <li><a href="what.html" class="button alt">Learn More</a></li>
+              <li><a href="/P1/what.html" class="button alt">Learn More</a></li>
             </ul>
           </div>
         </article>
@@ -111,7 +111,7 @@
               application. In the development process, we all will learn more!
             </p>
             <ul class="actions">
-              <li><a href="how.html" class="button alt">Learn More</a></li>
+              <li><a href="P1/how.html" class="button alt">Learn More</a></li>
             </ul>
           </div>
         </article>
@@ -126,7 +126,7 @@
               beforehand. We has planned how to complete this project.
             </p>
             <ul class="actions">
-              <li><a href="when.html" class="button alt">Learn More</a></li>
+              <li><a href="P1/when.html" class="button alt">Learn More</a></li>
             </ul>
           </div>
         </article>
