--- a/P2/Estimation_Plan.html
+++ b/P2/Estimation_Plan.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>When Section</title>
+    <title>Estimation Plan</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
